# linux-cli-example

./: README.md
CLI/: CMakeLists.txt  advanced_operations.h  basic_operations.h  change_directory.c  change_directory.h  clear.h  copy.c  copy.h  echo.c  find.c  help.h  list_directory.c  main.c  new_file.h  pause.c  pause.h  run.c  test  user_manual.txt
src/: advanced_operations.c  basic_operations.c  clear.c  echo.h  find.h  halt.c  halt.h  help.c  list_directory.h  new_file.c  operation.h  quit.c  quit.h  run.h  validation.c  validation.h
